vpn-bot/src/k8s/environment/manifests/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: vpn
  labels:
    name: grafana
spec:
  type: ClusterIP
  ports:
    - name: grafana-tcp
      targetPort: 3000
      protocol: TCP
      port: 3000
  selector:
    name: grafana
